fix gap in phone video

--- a/css/style.css
+++ b/css/style.css
@@ -564,7 +564,7 @@ body {
       box-shadow: 0 0 30px rgba(0, 0, 0, 0.3); }
       @media (max-width: 991px) {
         .phone__video--main {
-          height: 58.8rem; } }
+          height: 59.65rem; } }
     .phone__video--background {
       width: 100%;
       height: 100%;
