--- a/sass/components/_phone.scss
+++ b/sass/components/_phone.scss
@@ -68,7 +68,7 @@
             box-shadow: 0 0 30px rgba(0, 0, 0, 0.3);
 
             @include addMediaQuery(laptop) {
-                height: 58.8rem;
+                height: 59.65rem;
             }
         }
 
